--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,18 @@
     <string name="app_name">Travel</string>
 
     <!-- TODO: Remove or change this placeholder text -->
+    <string name="nearbyPlace">Search Nearby Places</string>
+    <string-array name="Resturant">
+        <item>Bank</item>
+        <item>Venus</item>
+        <item>Earth</item>
+        <item>Mars</item>
+        <item>Jupiter</item>
+        <item>Saturn</item>
+        <item>Uranus</item>
+        <item>Neptune</item>
+    </string-array>
+
+    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
